# data-gatherer

./: .gitignore  .trivyignore  Dockerfile  README.md  push_to_harbor.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: push.yaml
src/: config.py  dispatcher.py  main.py  user_defined_functions.py
src/routers/api/: routes.py
tests/: conftest.py
