[project]
name = "solver-controller"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1,<0.136",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "gunicorn>=25.1,<26.0",
    "kubernetes>=35,<36",
    "aio-pika>=9.0,<10.0",
    "pika>=1.0,<2.0",
    "dacite>=1.9.2,<2.0",
    # Pinned transitive dependencies to fix known vulnerabilities
    "python-multipart>=0.0.22",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.6,<1.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    # Pinned transitive dependency to fix known vulnerability
    "filelock>=3.20.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
